# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  29 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, make.globals,
  make.globals.ppc: internalized definitions of BUILDDIR and PKG_TMPDIR in
  order to make things work as expected when one sets PORTAGE_TMPDIR.  The new
  config file var expansion algorithm made this change necessary.
  
  29 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fix doebuild()
  so that pkg_setup() gets called when a .tbz2 package is being built.  This
  closes bug #3673.
  
  29 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: tweaked the
  aux_get() code to automatically regenerate cache files if they have the
  incorrect number of entries.
  
  29 Jun 2002; Martin Schlemmer <azarah@gentoo.org> portage.py: merge in some
  of the missing ld.so.preload fixes again.

  29 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: new version
  with highly-optimized dependency calculation caching, particularly for
  portdbapi.  Includes new three-level caching portdbapi xmatch() method.
 
  27 Jun 2002; Grant Goodyear <g2boojum@gentoo.org> ebuild.sh: Added keepdir()
  function so that it no longer has to be hardcoded in ebuilds.

*portage-2.0.8 (27 Jun 2002)
 
  27 Jun 2002; Daniel Robbins <drobbins@gentoo.org> emerge: in an attempt to
  provide a predictable release of Portage, I'm reverting the "emerge
  --pretend" "fix" in Portage-2.0.6.  It ignores custom USE settings when
  calculating child deps, which makes things tricky for users.  We'll use the
  "expected" (old) behavior for now until we have a solution for this USE
  issue.
  
  27 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed handling
  of ! deps in match(), closing bug #4219.  Thanks Spidler!

  27 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: disabled USE
  regeneration on reset() for performance purposes.
